feat(traintest-split): train-test splitting in data_preparation notebook

--- a/notebooks/data_preparation.ipynb
+++ b/notebooks/data_preparation.ipynb
@@ -9,8 +9,21 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
     "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns"
+    "import seaborn as sns\n",
+    "\n",
+    "from pathlib import Path"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "DATA_DIR = Path(\"../data\")"
    ]
   },
   {
@@ -22,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -153,19 +166,19 @@
        "[72134 rows x 3 columns]"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data = pd.read_csv(\"../data/WELFake_Dataset.csv\", index_col=0)\n",
+    "data = pd.read_csv(DATA_DIR / \"WELFake_Dataset.csv\", index_col=0)\n",
     "data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -296,7 +309,7 @@
        "[70793 rows x 3 columns]"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -311,11 +324,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "clean_df.to_csv(\"../data/WELFake_Dataset_clean.csv\", index=True)"
+    "clean_df.to_csv(DATA_DIR / \"WELFake_clean.csv\", index=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Dataset splitting"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_df, test_df = train_test_split(clean_df, test_size=0.2, random_state=42)\n",
+    "train_df.to_csv(DATA_DIR / \"WELFake_clean_train.csv\", index=True)\n",
+    "test_df.to_csv(DATA_DIR / \"WELFake_clean_test.csv\", index=True)"
    ]
   },
   {
