Refactor: better separation of responsibilities in data_prep script; data prep notebook change to use new script

--- a/notebooks/data_preparation.ipynb
+++ b/notebooks/data_preparation.ipynb
@@ -2,24 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import numpy as np\n",
-    "\n",
-    "from sklearn.model_selection import train_test_split\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "\n",
-    "from pathlib import Path"
+    "from pathlib import Path\n",
+    "import sys\n",
+    "sys.path.append(\"..\")\n",
+    "\n",
+    "from scripts.data_prep import preprocess_dataset"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,150 +31,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Data Cleaning"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>title</th>\n",
-       "      <th>text</th>\n",
-       "      <th>label</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>LAW ENFORCEMENT ON HIGH ALERT Following Threat...</td>\n",
-       "      <td>No comment is expected from Barack Obama Membe...</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Did they post their votes for Hillary already?</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>UNBELIEVABLE! OBAMA’S ATTORNEY GENERAL SAYS MO...</td>\n",
-       "      <td>Now, most of the demonstrators gathered last ...</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Bobby Jindal, raised Hindu, uses story of Chri...</td>\n",
-       "      <td>A dozen politically active pastors came here f...</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>SATAN 2: Russia unvelis an image of its terrif...</td>\n",
-       "      <td>The RS-28 Sarmat missile, dubbed Satan 2, will...</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>72129</th>\n",
-       "      <td>Russians steal research on Trump in hack of U....</td>\n",
-       "      <td>WASHINGTON (Reuters) - Hackers believed to be ...</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>72130</th>\n",
-       "      <td>WATCH: Giuliani Demands That Democrats Apolog...</td>\n",
-       "      <td>You know, because in fantasyland Republicans n...</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>72131</th>\n",
-       "      <td>Migrants Refuse To Leave Train At Refugee Camp...</td>\n",
-       "      <td>Migrants Refuse To Leave Train At Refugee Camp...</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>72132</th>\n",
-       "      <td>Trump tussle gives unpopular Mexican leader mu...</td>\n",
-       "      <td>MEXICO CITY (Reuters) - Donald Trump’s combati...</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>72133</th>\n",
-       "      <td>Goldman Sachs Endorses Hillary Clinton For Pre...</td>\n",
-       "      <td>Goldman Sachs Endorses Hillary Clinton For Pre...</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>72134 rows × 3 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                                   title  \\\n",
-       "0      LAW ENFORCEMENT ON HIGH ALERT Following Threat...   \n",
-       "1                                                    NaN   \n",
-       "2      UNBELIEVABLE! OBAMA’S ATTORNEY GENERAL SAYS MO...   \n",
-       "3      Bobby Jindal, raised Hindu, uses story of Chri...   \n",
-       "4      SATAN 2: Russia unvelis an image of its terrif...   \n",
-       "...                                                  ...   \n",
-       "72129  Russians steal research on Trump in hack of U....   \n",
-       "72130   WATCH: Giuliani Demands That Democrats Apolog...   \n",
-       "72131  Migrants Refuse To Leave Train At Refugee Camp...   \n",
-       "72132  Trump tussle gives unpopular Mexican leader mu...   \n",
-       "72133  Goldman Sachs Endorses Hillary Clinton For Pre...   \n",
-       "\n",
-       "                                                    text  label  \n",
-       "0      No comment is expected from Barack Obama Membe...      1  \n",
-       "1         Did they post their votes for Hillary already?      1  \n",
-       "2       Now, most of the demonstrators gathered last ...      1  \n",
-       "3      A dozen politically active pastors came here f...      0  \n",
-       "4      The RS-28 Sarmat missile, dubbed Satan 2, will...      1  \n",
-       "...                                                  ...    ...  \n",
-       "72129  WASHINGTON (Reuters) - Hackers believed to be ...      0  \n",
-       "72130  You know, because in fantasyland Republicans n...      1  \n",
-       "72131  Migrants Refuse To Leave Train At Refugee Camp...      0  \n",
-       "72132  MEXICO CITY (Reuters) - Donald Trump’s combati...      0  \n",
-       "72133  Goldman Sachs Endorses Hillary Clinton For Pre...      1  \n",
-       "\n",
-       "[72134 rows x 3 columns]"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "data = pd.read_csv(DATA_DIR / \"WELFake_Dataset.csv\", index_col=0)\n",
-    "data"
+    "## Data Preprocessing"
    ]
   },
   {
@@ -209,34 +67,34 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>LAW ENFORCEMENT ON HIGH ALERT Following Threat...</td>\n",
-       "      <td>No comment is expected from Barack Obama Membe...</td>\n",
+       "      <th>45905</th>\n",
+       "      <td>Exclusive: Foreign Isis Fighters Defend Mosul ...</td>\n",
+       "      <td>\\nForeign fighters for Isis are choosing to ...</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>UNBELIEVABLE! OBAMA’S ATTORNEY GENERAL SAYS MO...</td>\n",
-       "      <td>Now, most of the demonstrators gathered last ...</td>\n",
+       "      <th>37291</th>\n",
+       "      <td>JUDGE JEANINE UNLOADS On Hillary: “How Did You...</td>\n",
+       "      <td>You don t want to miss a second of Judge Jeani...</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Bobby Jindal, raised Hindu, uses story of Chri...</td>\n",
-       "      <td>A dozen politically active pastors came here f...</td>\n",
+       "      <th>46730</th>\n",
+       "      <td>Gunman attacks Saudi security forces at gate o...</td>\n",
+       "      <td>RIYADH (Reuters) - Two Saudi guards were shot ...</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>SATAN 2: Russia unvelis an image of its terrif...</td>\n",
-       "      <td>The RS-28 Sarmat missile, dubbed Satan 2, will...</td>\n",
-       "      <td>1</td>\n",
+       "      <th>66327</th>\n",
+       "      <td>Indian Software Mogul: Hire Americans Now Beca...</td>\n",
+       "      <td>A leading Indian software entrepreneur says In...</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>About Time! Christian Group Sues Amazon and SP...</td>\n",
-       "      <td>All we can say on this one is it s about time ...</td>\n",
-       "      <td>1</td>\n",
+       "      <th>58329</th>\n",
+       "      <td>Rep. Diaz-Balart: Liberals Against Trump Who F...</td>\n",
+       "      <td>Florida Congressman Mario   attacked the “doub...</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -245,34 +103,34 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>72129</th>\n",
-       "      <td>Russians steal research on Trump in hack of U....</td>\n",
-       "      <td>WASHINGTON (Reuters) - Hackers believed to be ...</td>\n",
+       "      <th>33088</th>\n",
+       "      <td>France's Macron unveils plan to curb violence ...</td>\n",
+       "      <td>PARIS (Reuters) - French President Emmanuel Ma...</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>72130</th>\n",
-       "      <td>WATCH: Giuliani Demands That Democrats Apolog...</td>\n",
-       "      <td>You know, because in fantasyland Republicans n...</td>\n",
+       "      <th>31762</th>\n",
+       "      <td>HILLARY CLINTON Abruptly Cancels Fundraiser In...</td>\n",
+       "      <td>Zero Hedge reported:If there was a time Hillar...</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>72131</th>\n",
-       "      <td>Migrants Refuse To Leave Train At Refugee Camp...</td>\n",
-       "      <td>Migrants Refuse To Leave Train At Refugee Camp...</td>\n",
+       "      <th>45631</th>\n",
+       "      <td>German SPD considers propping up Merkel, but o...</td>\n",
+       "      <td>BERLIN (Reuters) - Germany s Social Democrats ...</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>72132</th>\n",
-       "      <td>Trump tussle gives unpopular Mexican leader mu...</td>\n",
-       "      <td>MEXICO CITY (Reuters) - Donald Trump’s combati...</td>\n",
+       "      <th>47058</th>\n",
+       "      <td>House Republicans repeal Obamacare, hurdles aw...</td>\n",
+       "      <td>WASHINGTON (Reuters) - The U.S. House of Repre...</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>72133</th>\n",
-       "      <td>Goldman Sachs Endorses Hillary Clinton For Pre...</td>\n",
-       "      <td>Goldman Sachs Endorses Hillary Clinton For Pre...</td>\n",
-       "      <td>1</td>\n",
+       "      <th>19234</th>\n",
+       "      <td>What Brian Williams’s Chopper Whopper Says Abo...</td>\n",
+       "      <td>Embarrassing and infuriating: the NBC anchor’s...</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -281,30 +139,30 @@
       ],
       "text/plain": [
        "                                                   title  \\\n",
-       "0      LAW ENFORCEMENT ON HIGH ALERT Following Threat...   \n",
-       "2      UNBELIEVABLE! OBAMA’S ATTORNEY GENERAL SAYS MO...   \n",
-       "3      Bobby Jindal, raised Hindu, uses story of Chri...   \n",
-       "4      SATAN 2: Russia unvelis an image of its terrif...   \n",
-       "5      About Time! Christian Group Sues Amazon and SP...   \n",
+       "45905  Exclusive: Foreign Isis Fighters Defend Mosul ...   \n",
+       "37291  JUDGE JEANINE UNLOADS On Hillary: “How Did You...   \n",
+       "46730  Gunman attacks Saudi security forces at gate o...   \n",
+       "66327  Indian Software Mogul: Hire Americans Now Beca...   \n",
+       "58329  Rep. Diaz-Balart: Liberals Against Trump Who F...   \n",
        "...                                                  ...   \n",
-       "72129  Russians steal research on Trump in hack of U....   \n",
-       "72130   WATCH: Giuliani Demands That Democrats Apolog...   \n",
-       "72131  Migrants Refuse To Leave Train At Refugee Camp...   \n",
-       "72132  Trump tussle gives unpopular Mexican leader mu...   \n",
-       "72133  Goldman Sachs Endorses Hillary Clinton For Pre...   \n",
+       "33088  France's Macron unveils plan to curb violence ...   \n",
+       "31762  HILLARY CLINTON Abruptly Cancels Fundraiser In...   \n",
+       "45631  German SPD considers propping up Merkel, but o...   \n",
+       "47058  House Republicans repeal Obamacare, hurdles aw...   \n",
+       "19234  What Brian Williams’s Chopper Whopper Says Abo...   \n",
        "\n",
        "                                                    text  label  \n",
-       "0      No comment is expected from Barack Obama Membe...      1  \n",
-       "2       Now, most of the demonstrators gathered last ...      1  \n",
-       "3      A dozen politically active pastors came here f...      0  \n",
-       "4      The RS-28 Sarmat missile, dubbed Satan 2, will...      1  \n",
-       "5      All we can say on this one is it s about time ...      1  \n",
+       "45905    \\nForeign fighters for Isis are choosing to ...      1  \n",
+       "37291  You don t want to miss a second of Judge Jeani...      1  \n",
+       "46730  RIYADH (Reuters) - Two Saudi guards were shot ...      0  \n",
+       "66327  A leading Indian software entrepreneur says In...      0  \n",
+       "58329  Florida Congressman Mario   attacked the “doub...      0  \n",
        "...                                                  ...    ...  \n",
-       "72129  WASHINGTON (Reuters) - Hackers believed to be ...      0  \n",
-       "72130  You know, because in fantasyland Republicans n...      1  \n",
-       "72131  Migrants Refuse To Leave Train At Refugee Camp...      0  \n",
-       "72132  MEXICO CITY (Reuters) - Donald Trump’s combati...      0  \n",
-       "72133  Goldman Sachs Endorses Hillary Clinton For Pre...      1  \n",
+       "33088  PARIS (Reuters) - French President Emmanuel Ma...      0  \n",
+       "31762  Zero Hedge reported:If there was a time Hillar...      1  \n",
+       "45631  BERLIN (Reuters) - Germany s Social Democrats ...      0  \n",
+       "47058  WASHINGTON (Reuters) - The U.S. House of Repre...      0  \n",
+       "19234  Embarrassing and infuriating: the NBC anchor’s...      0  \n",
        "\n",
        "[70793 rows x 3 columns]"
       ]
@@ -315,38 +173,12 @@
     }
    ],
    "source": [
-    "clean_df = data.copy(deep=True)\n",
-    "clean_df.loc[clean_df[\"title\"].str.split().str.len() == 0, \"title\"] = pd.NA # Empty title is same as NaN\n",
-    "clean_df.loc[clean_df[\"text\"].str.split().str.len() == 0, \"text\"] = pd.NA # Empty text is same as NaN\n",
-    "clean_df = clean_df.dropna(axis=0, how=\"any\")\n",
+    "data = pd.read_csv(DATA_DIR / \"WELFake_Dataset.csv\", index_col=0)\n",
+    "\n",
+    "train_df, test_df = preprocess_dataset(data, test_size=0.2)\n",
+    "\n",
+    "clean_df = pd.concat([train_df, test_df], axis=0)\n",
     "clean_df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "clean_df.to_csv(DATA_DIR / \"WELFake_clean.csv\", index=True)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Dataset splitting"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "train_df, test_df = train_test_split(clean_df, test_size=0.2, random_state=42)\n",
-    "train_df.to_csv(DATA_DIR / \"WELFake_clean_train.csv\", index=True)\n",
-    "test_df.to_csv(DATA_DIR / \"WELFake_clean_test.csv\", index=True)"
    ]
   },
   {
