Bugfix: wrong RandomForestClassifier class

--- a/notebooks/classifier_evalutation.ipynb
+++ b/notebooks/classifier_evalutation.ipynb
@@ -31,7 +31,7 @@
     "    LogisticRegressionNewsClassifier,\n",
     "    LSTMClassifier,\n",
     "    MultinomialNaiveBayesClassifier,\n",
-    "    RandomForestClassifier,\n",
+    "    RandomForestClassifierClass,\n",
     "    RecurrentNeuralNetworkClassifier,\n",
     "    SupportVectorMachineClassifier\n",
     ") "
@@ -46,7 +46,7 @@
     "CLASSIFIERS_DICT = {\n",
     "    \"logistic\": (LogisticRegressionNewsClassifier, \"ml\"),\n",
     "    \"naive_bayes\": (MultinomialNaiveBayesClassifier, \"ml\"),\n",
-    "    \"random_forest\": (RandomForestClassifier, \"ml\"),\n",
+    "    \"random_forest\": (RandomForestClassifierClass, \"ml\"),\n",
     "    \"svm\": (SupportVectorMachineClassifier, \"ml\"),\n",
     "    \"cnn\": (ConvolutionalNeuralNetworkClassifier, \"dl\"),\n",
     "    \"rnn\": (RecurrentNeuralNetworkClassifier, \"dl\"),\n",
@@ -143,7 +143,22 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:root:Fitting and predicting on combined data\n"
+      "INFO:root:Fitting and predicting on combined data\n",
+      "INFO:root:Calculating metrics\n",
+      "INFO:root:Started evaluating <class 'sklearn.ensemble._forest.RandomForestClassifier'>\n",
+      "INFO:root:Fitting and predicting on original data\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'RandomForestClassifier' object has no attribute 'load_model'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[16], line 11\u001b[0m\n\u001b[0;32m      8\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m=== Started working on\u001b[39m\u001b[38;5;124m\"\u001b[39m, synthetic_name)\n\u001b[0;32m      9\u001b[0m synth_df \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mread_csv(DATASET_DIR \u001b[38;5;241m/\u001b[39m synthetic_name)\n\u001b[1;32m---> 11\u001b[0m results \u001b[38;5;241m=\u001b[39m \u001b[43mevaluate_classifiers\u001b[49m\u001b[43m(\u001b[49m\n\u001b[0;32m     12\u001b[0m \u001b[43m    \u001b[49m\u001b[43mclassifiers\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mclassifiers\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\n\u001b[0;32m     13\u001b[0m \u001b[43m    \u001b[49m\u001b[43mtrain_df\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mtrain_df\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m     14\u001b[0m \u001b[43m    \u001b[49m\u001b[43msynth_df\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43msynth_df\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m     15\u001b[0m \u001b[43m    \u001b[49m\u001b[43mtest_df\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mtest_df\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m     16\u001b[0m \u001b[43m    \u001b[49m\u001b[43mmetrics\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43macc\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mauc\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mf1\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m     17\u001b[0m \u001b[43m    \u001b[49m\u001b[43morig_tokenizer_paths\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43morig_tokenizer_paths\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m     18\u001b[0m \u001b[43m    \u001b[49m\u001b[43mcombined_tokenizer_paths\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43morig_tokenizer_paths\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m     19\u001b[0m \u001b[43m    \u001b[49m\u001b[43morig_classifier_paths\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43morig_classifier_paths\u001b[49m\n\u001b[0;32m     20\u001b[0m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     22\u001b[0m total_results[synthetic_name] \u001b[38;5;241m=\u001b[39m {\n\u001b[0;32m     23\u001b[0m     classif_name: {\n\u001b[0;32m     24\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124morig\u001b[39m\u001b[38;5;124m\"\u001b[39m: classif_result[\u001b[38;5;241m0\u001b[39m],\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     29\u001b[0m     )\n\u001b[0;32m     30\u001b[0m }\n",
+      "File \u001b[1;32md:\\Documents\\University\\Semester6\\NLP\\fake-news\\notebooks\\..\\fake_news\\classifier_evaluation.py:82\u001b[0m, in \u001b[0;36mevaluate_classifiers\u001b[1;34m(classifiers, train_df, synth_df, test_df, metrics, orig_tokenizer_paths, combined_tokenizer_paths, nltk_data_path, orig_classifier_paths)\u001b[0m\n\u001b[0;32m     78\u001b[0m     _fit_classifier(\n\u001b[0;32m     79\u001b[0m         orig_classifier, clf_type, orig_preprocessor, train_df\n\u001b[0;32m     80\u001b[0m     )\n\u001b[0;32m     81\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m---> 82\u001b[0m     \u001b[43morig_classifier\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mload_model\u001b[49m(orig_classifier_paths[i])\n\u001b[0;32m     83\u001b[0m \u001b[38;5;66;03m# Predict\u001b[39;00m\n\u001b[0;32m     84\u001b[0m orig_pred \u001b[38;5;241m=\u001b[39m _predict_classifier(\n\u001b[0;32m     85\u001b[0m     orig_classifier, clf_type, orig_preprocessor, test_df\n\u001b[0;32m     86\u001b[0m )\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'RandomForestClassifier' object has no attribute 'load_model'"
      ]
     }
    ],
